--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.caching=false
 org.gradle.configuration-cache=false
 
 # Plugin Metadata
-plugin_group=ExampleGroup
-plugin_description=An example plugin for Hytale!
-plugin_author=It's you!
-plugin_website=
-plugin_main_entrypoint=com.example.exampleplugin.ExamplePlugin
+plugin_group=DZPlugin
+plugin_description=Hytale Plugin Template
+plugin_author=DZultra
+plugin_website=https://github.com/DZultra
+plugin_main_entrypoint=net.dzultra.hytaleplugin.HytalePlugin
 server_version=*
